--- a/app/src/main/res/layout/dialog_city_selector.xml
+++ b/app/src/main/res/layout/dialog_city_selector.xml
@@ -25,15 +25,18 @@
         app:layout_constraintTop_toTopOf="@id/button_back"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="15dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:background="#00000000"
+        app:boxCornerRadiusTopStart="16dp"
+        app:boxCornerRadiusBottomEnd="16dp"
+        app:boxCornerRadiusBottomStart="16dp"
+        app:boxCornerRadiusTopEnd="16dp"
+        style="@style/LoginTextInputLayoutStyle"
         app:endIconMode="clear_text">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/find_city_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#00000000"/>
+            android:shadowColor="@color/green_background"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
