--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -39,33 +39,37 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/user_email_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:hint="@string/email"
         app:layout_constraintTop_toBottomOf="@id/text_enter"
         android:layout_marginTop="24dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:background="@drawable/ic_et_layout">
+        app:boxCornerRadiusTopStart="16dp"
+        app:boxCornerRadiusBottomEnd="16dp"
+        app:boxCornerRadiusBottomStart="16dp"
+        app:boxCornerRadiusTopEnd="16dp"
+        style="@style/LoginTextInputLayoutStyle">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/user_email_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@color/black"
-            app:boxBackgroundMode="none"
-            android:textSize="16sp"
-            android:background="#00000000"/>
+            android:textSize="16sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/user_password_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:hint="@string/password"
         app:layout_constraintTop_toBottomOf="@id/user_email_layout"
         android:layout_marginTop="12dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:background="@drawable/ic_et_layout">
+        app:boxCornerRadiusTopStart="16dp"
+        app:boxCornerRadiusBottomEnd="16dp"
+        app:boxCornerRadiusBottomStart="16dp"
+        app:boxCornerRadiusTopEnd="16dp"
+        style="@style/LoginTextInputLayoutStyle">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/user_password_et"
@@ -73,8 +77,7 @@
             android:layout_height="match_parent"
             android:textColor="@color/black"
             app:boxBackgroundMode="none"
-            android:textSize="16sp"
-            android:background="#00000000"/>
+            android:textSize="16sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -86,7 +89,7 @@
         android:textColor="@color/white"
         android:textAllCaps="false"
         android:textSize="16sp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/user_password_layout"
         app:layout_constraintStart_toStartOf="parent"
         android:text="@string/continue_button"/>
