--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="main_color">#2898FF</color>
@@ -13,4 +13,5 @@
     <color name="green_background">#AADB65</color>
     <color name="red_background">#EF4545</color>
     <color name="gray_background">#FAFAFA</color>
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#E9F5FF</color>
 </resources>
