--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -60,6 +60,16 @@
         <argument
             android:name="cities"
             app:argType="string[]" />
+        <argument
+            android:name="date"
+            app:argType="string"/>
+        <action
+            android:id="@+id/action_navigation_trip_fragment_to_navigation_bus_plan"
+            app:destination="@id/navigation_bus_plan"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"/>
 
     </fragment>
 
@@ -73,6 +83,12 @@
         android:id="@+id/navigation_bus_plan"
         android:name="kz.busjol.ui.bus_plan.BusPlanFragment"
         tools:layout="@layout/fragment_bus_plan"
-        android:label="BusPlanFragment"/>
+        android:label="BusPlanFragment">
+
+        <argument
+            android:name="trip_type"
+            app:argType="string"/>
+
+    </fragment>
 
 </navigation>
