--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/gray_background">
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -16,7 +17,7 @@
         android:layout_marginStart="24dp"/>
 
     <TextView
-        android:id="@+id/title_choose_seats"
+        android:id="@+id/title_booking"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_booking"
@@ -27,5 +28,191 @@
         android:textSize="20sp"
         android:textColor="@color/bolder_text"
         android:textStyle="bold"/>
+
+    <View
+        android:id="@+id/booking_details_layout"
+        android:layout_width="match_parent"
+        android:layout_height="125dp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="37dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/ic_frame_trip"
+        app:layout_constraintTop_toBottomOf="@id/title_booking" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/booking_trip_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="11sp"
+        tools:text="Рейс №23"
+        app:layout_constraintTop_toTopOf="@id/booking_details_layout"
+        app:layout_constraintStart_toStartOf="@id/booking_details_layout"
+        android:layout_marginTop="12dp"
+        android:layout_marginStart="16dp"
+        android:textColor="@color/black"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/route_cities"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:textColor="@color/bolder_text"
+        android:textSize="17sp"
+        app:layout_constraintStart_toStartOf="@+id/booking_trip_number"
+        app:layout_constraintTop_toBottomOf="@id/booking_trip_number"
+        tools:text="Алматы - Нурсултан"
+        android:textStyle="bold" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="11sp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="@+id/route_cities"
+        app:layout_constraintTop_toBottomOf="@id/route_cities"
+        tools:text="24.02.2022 09:00" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/booking_amount"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        app:layout_constraintStart_toStartOf="@id/booking_details_layout"
+        app:layout_constraintEnd_toEndOf="@id/booking_details_layout"
+        app:layout_constraintBottom_toBottomOf="@id/booking_details_layout"
+        android:background="@drawable/ic_blue_bottom_layout"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:textSize="17sp"
+        tools:text="10 000 〒"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/button_booking_details"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/details"
+        android:textColor="@color/blue_text"
+        android:textSize="13sp"
+        android:layout_marginEnd="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/route_cities"
+        app:layout_constraintEnd_toEndOf="@+id/booking_details_layout"
+        app:layout_constraintTop_toTopOf="@+id/route_cities" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/text_booking_expires_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/booking_expires"
+        android:textSize="15sp"
+        android:layout_marginStart="15dp"
+        android:textColor="@color/black"
+        android:layout_marginTop="28dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/booking_details_layout" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/booking_expires_timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:textColor="@color/black"
+        android:textSize="17sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/text_booking_expires_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/text_booking_expires_title"
+        tools:text="10:00" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_pay_with_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/card_frame"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:paddingBottom="12dp"
+        app:layout_constraintTop_toBottomOf="@id/text_booking_expires_title">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/appCompatImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
+            android:src="@drawable/ic_card_image"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/booking_card_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/with_bank_cards"
+            android:textColor="@color/bolder_text"
+            android:textSize="15sp"
+            android:paddingBottom="12dp"
+            app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
+            app:layout_constraintTop_toBottomOf="@id/appCompatImageView" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_pay_with_card"
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            app:layout_constraintTop_toBottomOf="@id/booking_card_title"
+            android:layout_marginHorizontal="16dp"
+            android:background="@drawable/ic_button_layout"
+            android:text="@string/proceed_to_checkout_button"
+            android:textAllCaps="false"
+            android:textColor="@color/white"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_pay_with_kaspi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/card_frame"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:paddingBottom="12dp"
+        app:layout_constraintTop_toBottomOf="@id/layout_pay_with_card">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/appCompatImageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
+            android:src="@drawable/kaspi_logo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/booking_kaspi_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/with_bank_cards"
+            android:textColor="@color/bolder_text"
+            android:textSize="15sp"
+            android:paddingBottom="12dp"
+            app:layout_constraintStart_toStartOf="@+id/appCompatImageView2"
+            app:layout_constraintTop_toBottomOf="@id/appCompatImageView2" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_pay_with_kaspi"
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            app:layout_constraintTop_toBottomOf="@id/booking_kaspi_title"
+            android:layout_marginHorizontal="16dp"
+            android:background="@drawable/ic_button_layout"
+            android:text="@string/proceed_to_checkout_button"
+            android:textAllCaps="false"
+            android:textColor="@color/white"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
