--- a/app/src/main/res/layout/fragment_payment_order.xml
+++ b/app/src/main/res/layout/fragment_payment_order.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_background"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/back_button"
@@ -17,10 +16,10 @@
         android:layout_marginStart="24dp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/title_trip"
+        android:id="@+id/title_payment_order"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Алматы-НурСултан"
+        android:text="@string/title_order_payment"
         app:layout_constraintStart_toEndOf="@id/back_button"
         app:layout_constraintTop_toTopOf="@id/back_button"
         app:layout_constraintBottom_toBottomOf="@id/back_button"
@@ -29,16 +28,13 @@
         android:textColor="@color/bolder_text"
         android:textStyle="bold"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_trip"
+    <WebView
+        android:id="@+id/payment_order_web_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="30dp"
-        android:clipToPadding="false"
-        android:paddingHorizontal="15dp"
-        app:layout_constraintTop_toBottomOf="@id/title_trip"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/title_payment_order"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:listitem="@layout/item_trip"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
