--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="15dp"
     tools:context=".ui.search.SearchFragment">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/search_title"
@@ -168,6 +164,15 @@
 
         </FrameLayout>
 
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/center_barrier"
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -226,28 +231,17 @@
             app:layout_constraintBottom_toBottomOf="@id/passenger_number_layout"
             android:layout_marginEnd="16dp"/>
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/search_trip_button"
-            android:layout_width="match_parent"
+         <androidx.appcompat.widget.AppCompatButton
+             android:id="@+id/search_trip_button"
+             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_button_layout"
-            android:textColor="@color/white"
+            android:text="@string/search_button"
             android:textAllCaps="false"
+            android:textColor="@color/white"
             android:textSize="16sp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@id/date_layout"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:text="@string/search_button"/>
+            app:layout_constraintTop_toBottomOf="@id/date_layout" />
 
-        <androidx.constraintlayout.widget.Barrier
-            android:id="@+id/center_barrier"
-            android:layout_width="1dp"
-            android:layout_height="1dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
