--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -132,6 +132,7 @@
             android:layout_width="0dp"
             android:layout_height="70dp"
             android:layout_marginTop="24dp"
+            android:layout_marginEnd="2.5dp"
             android:background="@drawable/ic_et_layout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/center_barrier"
@@ -189,7 +190,7 @@
             android:layout_height="70dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/ic_et_layout"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="2.5dp"
             app:layout_constraintStart_toStartOf="@id/center_barrier"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/to_city_layout">
