--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -19,6 +19,15 @@
         android:textColor="@color/bolder_text"
         android:textStyle="bold"/>
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/contacts_image"
+        android:layout_marginTop="86dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title_contacts" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/faq_button"
         android:layout_width="match_parent"
