--- a/app/src/main/res/layout/fragment_tickets.xml
+++ b/app/src/main/res/layout/fragment_tickets.xml
@@ -30,14 +30,56 @@
         app:layout_constraintTop_toBottomOf="@id/title_tickets" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/no_tickets_text"
+        android:id="@+id/no_tickets_text_authorized"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/no_tickets"
+        android:visibility="gone"
         android:textSize="14sp"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="@+id/no_tickets_image"
         app:layout_constraintStart_toStartOf="@+id/no_tickets_image"
         app:layout_constraintTop_toBottomOf="@+id/no_tickets_image" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/no_tickets_text_not_authorize_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tickets_list_title"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/no_tickets_image"
+        app:layout_constraintStart_toStartOf="@+id/no_tickets_image"
+        app:layout_constraintTop_toBottomOf="@+id/no_tickets_image" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/no_tickets_text_not_authorize_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:text="@string/tickets_list_text"
+        android:gravity="center"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/no_tickets_text_not_authorize_title"
+        app:layout_constraintStart_toStartOf="@id/no_tickets_text_not_authorize_title"
+        app:layout_constraintEnd_toEndOf="@id/no_tickets_text_not_authorize_title"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button_my_tickets_authorization_enter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_button_layout"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="32dp"
+        android:text="@string/enter_button"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
