--- a/app/src/main/res/layout/dialog_passenger_quantity.xml
+++ b/app/src/main/res/layout/dialog_passenger_quantity.xml
@@ -52,7 +52,7 @@
     <View
         android:id="@+id/view"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/ic_layout_tariff"
@@ -75,8 +75,8 @@
 
     <View
         android:id="@+id/button_plus_adult_tariff"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_marginEnd="16dp"
         android:textSize="15sp"
         android:shadowColor="@color/black"
@@ -89,8 +89,8 @@
 
     <View
         android:id="@+id/button_minus_adult_tariff"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:background="@drawable/ic_quantity_button"
         android:gravity="center"
         android:shadowColor="@color/black"
@@ -135,7 +135,7 @@
     <View
         android:id="@+id/view2"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/ic_layout_tariff"
@@ -158,8 +158,8 @@
 
     <View
         android:id="@+id/button_plus_child_tariff"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_marginEnd="16dp"
         android:textSize="15sp"
         android:shadowColor="@color/black"
@@ -172,8 +172,8 @@
 
     <View
         android:id="@+id/button_minus_child_tariff"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:background="@drawable/ic_quantity_button"
         android:gravity="center"
         android:shadowColor="@color/black"
@@ -218,7 +218,7 @@
     <View
         android:id="@+id/view3"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/ic_layout_tariff"
@@ -241,8 +241,8 @@
 
     <View
         android:id="@+id/button_plus_disable_tariff"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_marginEnd="16dp"
         android:textSize="15sp"
         android:shadowColor="@color/black"
@@ -255,8 +255,8 @@
 
     <View
         android:id="@+id/button_minus_disable_tariff"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:background="@drawable/ic_quantity_button"
         android:gravity="center"
         android:shadowColor="@color/black"
@@ -297,5 +297,19 @@
         app:layout_constraintEnd_toStartOf="@+id/button_plus_disable_tariff"
         app:layout_constraintStart_toEndOf="@+id/button_minus_disable_tariff"
         app:layout_constraintTop_toTopOf="@+id/button_plus_disable_tariff" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/continue_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_button_layout"
+        android:text="@string/continue_button"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:layout_marginTop="32dp"
+        android:layout_marginHorizontal="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
