--- a/app/src/main/res/layout/fragment_driver_scanner.xml
+++ b/app/src/main/res/layout/fragment_driver_scanner.xml
@@ -20,4 +20,26 @@
         app:frameThickness="2dp"
         app:maskColor="#77000000"/>
 
+    <View
+        android:id="@+id/view8"
+        android:layout_width="0.1dp"
+        android:layout_height="0.1dp"
+        android:layout_marginTop="150dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:alpha="0.8"
+        android:gravity="center"
+        android:text="@string/qr_camera_scan"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view8" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
