--- a/app/src/main/res/navigation/nav_my_tickets.xml
+++ b/app/src/main/res/navigation/nav_my_tickets.xml
@@ -8,6 +8,16 @@
     <fragment
         android:id="@+id/navigation_tickets"
         android:name="kz.busjol.ui.tickets.TicketsFragment"
-        tools:layout="@layout/fragment_tickets" />
+        tools:layout="@layout/fragment_tickets" >
+        <action
+            android:id="@+id/action_navigation_tickets_to_navigation_user"
+            app:destination="@id/nav_user"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"/>
+    </fragment>
+
+    <include app:graph="@navigation/nav_user"/>
 
 </navigation>
