--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -51,7 +51,7 @@
             android:layout_height="70dp"
             app:layout_constraintTop_toBottomOf="@id/search_banner"
             android:background="@drawable/ic_from_city_layout"
-            android:layout_marginTop="32dp">
+            android:layout_marginTop="24dp">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -131,7 +131,7 @@
             android:id="@+id/date_layout"
             android:layout_width="0dp"
             android:layout_height="70dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="2.5dp"
             android:background="@drawable/ic_et_layout"
             app:layout_constraintStart_toStartOf="parent"
@@ -188,7 +188,7 @@
             android:id="@+id/passenger_number_layout"
             android:layout_width="0dp"
             android:layout_height="70dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/ic_et_layout"
             android:layout_marginStart="2.5dp"
             app:layout_constraintStart_toStartOf="@id/center_barrier"
@@ -241,8 +241,8 @@
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="16sp"
+             android:layout_marginBottom="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/date_layout" />
+            app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
