--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -35,6 +35,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="30dp"
         android:clipToPadding="false"
+        android:overScrollMode="never"
         android:paddingHorizontal="15dp"
         app:layout_constraintTop_toBottomOf="@id/title_trip"
         app:layout_constraintStart_toStartOf="parent"
