--- a/app/src/main/res/layout/fragment_search_trip.xml
+++ b/app/src/main/res/layout/fragment_search_trip.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="15dp"
-    tools:context=".ui.search.SearchFragment">
+    tools:context=".ui.search_trip.SearchTripFragment">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/search_title"
