--- a/app/src/main/res/layout/fragment_driver_scanner.xml
+++ b/app/src/main/res/layout/fragment_driver_scanner.xml
@@ -12,19 +12,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:frameColor="@color/main_color"
-        app:frameCornersSize="50dp"
+        app:frameCornersSize="@dimen/_45sdp"
         app:frameCornersRadius="0dp"
         app:frameAspectRatioWidth="1"
         app:frameAspectRatioHeight="1"
         app:frameSize="0.75"
-        app:frameThickness="2dp"
+        app:frameThickness="@dimen/_1sdp"
         app:maskColor="#77000000"/>
 
     <View
         android:id="@+id/view8"
         android:layout_width="0.1dp"
         android:layout_height="0.1dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="@dimen/_150sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +36,7 @@
         android:alpha="0.8"
         android:gravity="center"
         android:text="@string/qr_camera_scan"
+        android:textSize="@dimen/_11sdp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
