--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -8,13 +8,13 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_29sdp"
+        android:layout_height="@dimen/_29sdp"
         android:src="@drawable/ic_button_back"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="21dp"
-        android:layout_marginStart="24dp"/>
+        android:layout_marginTop="@dimen/_16sdp"
+        android:layout_marginStart="@dimen/_19sdp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/title_trip"
@@ -24,8 +24,8 @@
         app:layout_constraintStart_toEndOf="@id/back_button"
         app:layout_constraintTop_toTopOf="@id/back_button"
         app:layout_constraintBottom_toBottomOf="@id/back_button"
-        android:layout_marginStart="16dp"
-        android:textSize="20sp"
+        android:layout_marginStart="@dimen/_12sdp"
+        android:textSize="@dimen/_16sdp"
         android:textColor="@color/bolder_text"
         android:textStyle="bold"/>
 
@@ -33,10 +33,11 @@
         android:id="@+id/rv_trip"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="@dimen/_25sdp"
+        android:layout_marginBottom="@dimen/_5sdp"
         android:clipToPadding="false"
         android:overScrollMode="never"
-        android:paddingHorizontal="15dp"
+        android:paddingHorizontal="@dimen/_11sdp"
         app:layout_constraintTop_toBottomOf="@id/title_trip"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
