--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -15,10 +15,10 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/icon_trip_bus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
-            android:layout_marginStart="27.5dp"
+            android:layout_width="@dimen/_18sdp"
+            android:layout_height="@dimen/_19sdp"
+            android:layout_marginTop="@dimen/_22sdp"
+            android:layout_marginStart="@dimen/_23sdp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:src="@drawable/ic_icon_bus"/>
@@ -27,10 +27,10 @@
             android:id="@+id/trip_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
+            android:textSize="@dimen/_10sdp"
             android:textColor="@color/bold_text"
             android:gravity="center"
-            android:layout_marginTop="13dp"
+            android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintStart_toStartOf="@id/icon_trip_bus"
             app:layout_constraintEnd_toEndOf="@id/icon_trip_bus"
             app:layout_constraintTop_toBottomOf="@id/icon_trip_bus"
@@ -40,10 +40,10 @@
             android:id="@+id/trip_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
+            android:textSize="@dimen/_10sdp"
             android:textColor="@color/bold_text"
             android:gravity="center"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="@dimen/_2sdp"
             app:layout_constraintStart_toStartOf="@id/icon_trip_bus"
             app:layout_constraintEnd_toEndOf="@id/icon_trip_bus"
             app:layout_constraintTop_toBottomOf="@id/trip_time"
@@ -53,11 +53,11 @@
             android:id="@+id/trip_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
+            android:textSize="@dimen/_10sdp"
             android:textColor="@color/bolder_text"
             android:gravity="start"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="31.5dp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginStart="@dimen/_29sdp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/icon_trip_bus"
             tools:text="Рейс №23"/>
@@ -66,10 +66,10 @@
             android:id="@+id/trip_direction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="@dimen/_13sdp"
             android:textColor="@color/bolder_text"
             android:gravity="start"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="@dimen/_2sdp"
             app:layout_constraintStart_toStartOf="@id/trip_number"
             app:layout_constraintTop_toBottomOf="@id/trip_number"
             android:textStyle="bold"
@@ -79,10 +79,10 @@
             android:id="@+id/trip_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="@dimen/_10sdp"
             android:textColor="@color/bold_text"
             android:gravity="start"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/_5sdp"
             app:layout_constraintStart_toStartOf="@id/trip_direction"
             app:layout_constraintTop_toBottomOf="@id/trip_direction"
             android:text="@string/seat_type"/>
@@ -91,10 +91,10 @@
             android:id="@+id/trip_free_seats"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="@dimen/_10sdp"
             android:textColor="@color/bold_text"
             android:gravity="start"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="@dimen/_2sdp"
             app:layout_constraintStart_toStartOf="@id/trip_type"
             app:layout_constraintTop_toBottomOf="@id/trip_type"
             android:text="@string/free_seats"/>
@@ -103,20 +103,20 @@
             android:id="@+id/trip_ferryman"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="@dimen/_10sdp"
             android:textColor="@color/bold_text"
             android:gravity="start"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="@dimen/_2sdp"
             app:layout_constraintStart_toStartOf="@id/trip_free_seats"
             app:layout_constraintTop_toBottomOf="@id/trip_free_seats"
-            android:paddingBottom="10dp"
+            android:paddingBottom="@dimen/_7sdp"
             android:text="@string/carrier"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/trip_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="@dimen/_13sdp"
             android:textColor="@color/blue_text"
             android:textStyle="bold"
             android:gravity="center"
