--- a/app/src/main/res/layout/bottom_sheet_dialog_bus_plan.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog_bus_plan.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="16dp"
+    android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/_13sdp"
+    android:padding="@dimen/_12sdp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -11,8 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/selected_seats"
-        android:layout_marginTop="19dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginTop="@dimen/_16sdp"
+        android:layout_marginStart="@dimen/_2sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -20,29 +21,28 @@
         android:id="@+id/selected_seats"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/text_selected_seats_title"
+        android:layout_marginStart="@dimen/_2sdp"
+        android:layout_marginEnd="@dimen/_2sdp"
         android:gravity="end"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="15dp"
-        android:textStyle="bold"
         android:textColor="@color/bolder_text"
-        tools:text="15/16/19"/>
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/text_selected_seats_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/text_selected_seats_title"
+        app:layout_constraintTop_toTopOf="@+id/text_selected_seats_title"
+        tools:text="15/16/19" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_290sdp"
+        android:layout_height="@dimen/_40sdp"
         android:background="@drawable/ic_button_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/selected_seats"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/_13sdp"
         android:text="@string/continue_button"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="16sp"
-        android:layout_marginHorizontal="15dp"/>
+        android:textSize="@dimen/_13sdp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
