--- a/app/src/main/res/layout/dialog_city_selector.xml
+++ b/app/src/main/res/layout/dialog_city_selector.xml
@@ -7,17 +7,17 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/button_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_29sdp"
+        android:layout_height="@dimen/_29sdp"
         android:src="@drawable/ic_button_back"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="15dp"/>
+        android:layout_marginTop="@dimen/_12sdp"
+        android:layout_marginStart="@dimen/_12sdp"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/find_city_layout"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/_255sdp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@id/button_back"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@id/find_city_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="15.5dp"
+        android:layout_marginTop="@dimen/_12sdp"
         android:clipToPadding="false"
         tools:listitem="@layout/item_city_selector"
         tools:itemCount="20"/>
