--- a/app/src/main/res/layout/dialog_passenger_quantity.xml
+++ b/app/src/main/res/layout/dialog_passenger_quantity.xml
@@ -3,26 +3,27 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="30dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:paddingBottom="@dimen/_24sdp">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/close_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_10sdp"
+        android:layout_height="@dimen/_10sdp"
         android:src="@drawable/ic_cross"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="21dp"/>
+        android:layout_marginStart="@dimen/_17sdp"
+        android:layout_marginTop="@dimen/_17sdp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/appCompatTextView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
+        android:layout_marginStart="@dimen/_17sdp"
         android:text="@string/passengers"
         android:textColor="@color/bolder_text"
-        android:textSize="20sp"
+        android:textSize="@dimen/_16sdp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/close_button"
         app:layout_constraintStart_toEndOf="@id/close_button"
@@ -31,31 +32,30 @@
     <View
         android:id="@+id/separator"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/_1sdp"
         android:background="@color/black"
         android:alpha="0.1"
         app:layout_constraintTop_toBottomOf="@id/close_button"
-        android:layout_marginTop="21dp"/>
+        android:layout_marginTop="@dimen/_18sdp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/appCompatTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="16.5dp"
+        android:layout_marginStart="@dimen/_17sdp"
+        android:layout_marginTop="@dimen/_13sdp"
         android:text="@string/passengers_tariffs"
         android:textColor="@color/bolder_text"
-        android:textSize="17sp"
+        android:textSize="@dimen/_13sdp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/separator" />
 
     <View
         android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="@dimen/_290sdp"
+        android:layout_height="@dimen/_45sdp"
+        android:layout_marginTop="@dimen/_28sdp"
         android:background="@drawable/ic_layout_tariff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,10 +65,10 @@
         android:id="@+id/appCompatTextView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/_13sdp"
         android:text="@string/passengers_tariffs_adult"
         android:textColor="@color/bolder_text"
-        android:textSize="15sp"
+        android:textSize="@dimen/_13sdp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintStart_toStartOf="@+id/view"
@@ -76,10 +76,10 @@
 
     <View
         android:id="@+id/button_plus_adult_tariff"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginEnd="16dp"
-        android:textSize="15sp"
+        android:layout_width="@dimen/_21sdp"
+        android:layout_height="@dimen/_21sdp"
+        android:layout_marginEnd="@dimen/_13sdp"
+        android:textSize="@dimen/_11sdp"
         android:shadowColor="@color/black"
         android:background="@drawable/ic_quantity_button"
         android:gravity="center"
@@ -90,20 +90,19 @@
 
     <View
         android:id="@+id/button_minus_adult_tariff"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="@dimen/_21sdp"
+        android:layout_height="@dimen/_21sdp"
         android:background="@drawable/ic_quantity_button"
         android:gravity="center"
         android:shadowColor="@color/black"
         android:textColor="@color/black"
-        android:textSize="15sp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="@dimen/_25sdp"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toStartOf="@+id/button_plus_adult_tariff"
         app:layout_constraintTop_toTopOf="@+id/view" />
 
     <ImageView
-        android:layout_width="10.67dp"
+        android:layout_width="@dimen/_8sdp"
         android:layout_height="0dp"
         android:src="@drawable/ic_minus"
         app:layout_constraintBottom_toBottomOf="@+id/button_minus_adult_tariff"
@@ -112,7 +111,7 @@
         app:layout_constraintTop_toTopOf="@+id/button_minus_adult_tariff" />
 
     <ImageView
-        android:layout_width="10.67dp"
+        android:layout_width="@dimen/_8sdp"
         android:layout_height="0dp"
         android:src="@drawable/ic_plus"
         app:layout_constraintBottom_toBottomOf="@+id/button_plus_adult_tariff"
@@ -124,9 +123,9 @@
         android:id="@+id/text_adult_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        tools:text="0"
         android:textColor="@color/bolder_text"
-        android:textSize="15sp"
+        android:textSize="@dimen/_12sdp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/button_minus_adult_tariff"
         app:layout_constraintEnd_toStartOf="@+id/button_plus_adult_tariff"
@@ -135,10 +134,9 @@
 
     <View
         android:id="@+id/view2"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="@dimen/_290sdp"
+        android:layout_height="@dimen/_45sdp"
+        android:layout_marginTop="@dimen/_13sdp"
         android:background="@drawable/ic_layout_tariff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -148,10 +146,10 @@
         android:id="@+id/appCompatTextView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/_13sdp"
         android:text="@string/passengers_tariffs_child_person"
         android:textColor="@color/bolder_text"
-        android:textSize="15sp"
+        android:textSize="@dimen/_13sdp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintStart_toStartOf="@+id/view2"
@@ -159,9 +157,9 @@
 
     <View
         android:id="@+id/button_plus_child_tariff"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="@dimen/_21sdp"
+        android:layout_height="@dimen/_21sdp"
+        android:layout_marginEnd="@dimen/_13sdp"
         android:textSize="15sp"
         android:shadowColor="@color/black"
         android:background="@drawable/ic_quantity_button"
@@ -173,20 +171,19 @@
 
     <View
         android:id="@+id/button_minus_child_tariff"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="@dimen/_21sdp"
+        android:layout_height="@dimen/_21sdp"
         android:background="@drawable/ic_quantity_button"
         android:gravity="center"
         android:shadowColor="@color/black"
         android:textColor="@color/black"
-        android:textSize="15sp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="@dimen/_25sdp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toStartOf="@+id/button_plus_child_tariff"
         app:layout_constraintTop_toTopOf="@+id/view2" />
 
     <ImageView
-        android:layout_width="10.67dp"
+        android:layout_width="@dimen/_8sdp"
         android:layout_height="0dp"
         android:src="@drawable/ic_minus"
         app:layout_constraintBottom_toBottomOf="@+id/button_minus_child_tariff"
@@ -195,7 +192,7 @@
         app:layout_constraintTop_toTopOf="@+id/button_minus_child_tariff" />
 
     <ImageView
-        android:layout_width="10.67dp"
+        android:layout_width="@dimen/_8sdp"
         android:layout_height="0dp"
         android:src="@drawable/ic_plus"
         app:layout_constraintBottom_toBottomOf="@+id/button_plus_child_tariff"
@@ -207,9 +204,9 @@
         android:id="@+id/text_child_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        tools:text="0"
         android:textColor="@color/bolder_text"
-        android:textSize="15sp"
+        android:textSize="@dimen/_12sdp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/button_minus_child_tariff"
         app:layout_constraintEnd_toStartOf="@+id/button_plus_child_tariff"
@@ -218,10 +215,9 @@
 
     <View
         android:id="@+id/view3"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="@dimen/_290sdp"
+        android:layout_height="@dimen/_45sdp"
+        android:layout_marginTop="@dimen/_13sdp"
         android:background="@drawable/ic_layout_tariff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -231,10 +227,10 @@
         android:id="@+id/appCompatTextView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/_13sdp"
         android:text="@string/passengers_tariffs_disable_person"
         android:textColor="@color/bolder_text"
-        android:textSize="15sp"
+        android:textSize="@dimen/_13sdp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
         app:layout_constraintStart_toStartOf="@+id/view3"
@@ -242,10 +238,9 @@
 
     <View
         android:id="@+id/button_plus_disable_tariff"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginEnd="16dp"
-        android:textSize="15sp"
+        android:layout_width="@dimen/_21sdp"
+        android:layout_height="@dimen/_21sdp"
+        android:layout_marginEnd="@dimen/_13sdp"
         android:shadowColor="@color/black"
         android:background="@drawable/ic_quantity_button"
         android:gravity="center"
@@ -256,20 +251,19 @@
 
     <View
         android:id="@+id/button_minus_disable_tariff"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="@dimen/_21sdp"
+        android:layout_height="@dimen/_21sdp"
         android:background="@drawable/ic_quantity_button"
         android:gravity="center"
         android:shadowColor="@color/black"
         android:textColor="@color/black"
-        android:textSize="15sp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="@dimen/_25sdp"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
         app:layout_constraintEnd_toStartOf="@+id/button_plus_disable_tariff"
         app:layout_constraintTop_toTopOf="@+id/view3" />
 
     <ImageView
-        android:layout_width="10.67dp"
+        android:layout_width="@dimen/_8sdp"
         android:layout_height="0dp"
         android:src="@drawable/ic_minus"
         app:layout_constraintBottom_toBottomOf="@+id/button_minus_disable_tariff"
@@ -278,7 +272,7 @@
         app:layout_constraintTop_toTopOf="@+id/button_minus_disable_tariff" />
 
     <ImageView
-        android:layout_width="10.67dp"
+        android:layout_width="@dimen/_8sdp"
         android:layout_height="0dp"
         android:src="@drawable/ic_plus"
         app:layout_constraintBottom_toBottomOf="@+id/button_plus_disable_tariff"
@@ -290,9 +284,9 @@
         android:id="@+id/text_disable_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        tools:text="0"
         android:textColor="@color/bolder_text"
-        android:textSize="15sp"
+        android:textSize="@dimen/_12sdp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/button_minus_disable_tariff"
         app:layout_constraintEnd_toStartOf="@+id/button_plus_disable_tariff"
@@ -301,15 +295,15 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/continue_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_290sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_25sdp"
         android:background="@drawable/ic_button_layout"
         android:text="@string/continue_button"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="16sp"
-        android:layout_marginTop="32dp"
-        android:layout_marginHorizontal="15dp"
+        android:textSize="@dimen/_13sdp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view3" />
 
