--- a/app/src/main/res/layout/dialog_trip_details.xml
+++ b/app/src/main/res/layout/dialog_trip_details.xml
@@ -6,32 +6,32 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/close_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_10sdp"
+        android:layout_height="@dimen/_10sdp"
         android:src="@drawable/ic_cross"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="21dp"/>
+        android:layout_marginStart="@dimen/_17sdp"
+        android:layout_marginTop="@dimen/_17sdp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
+        android:layout_marginStart="@dimen/_17sdp"
         app:layout_constraintTop_toTopOf="@id/close_button"
         app:layout_constraintStart_toEndOf="@id/close_button"
         app:layout_constraintBottom_toBottomOf="@id/close_button"
         android:text="@string/trip_details"
-        android:textSize="20sp"
+        android:textSize="@dimen/_16sdp"
         android:textColor="@color/bolder_text"
         android:textStyle="bold"/>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/_1sdp"
         android:background="@color/black"
         android:alpha="0.1"
         app:layout_constraintTop_toBottomOf="@id/close_button"
-        android:layout_marginTop="21dp"/>
+        android:layout_marginTop="@dimen/_18sdp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
