--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -8,13 +8,13 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/back_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_29sdp"
+        android:layout_height="@dimen/_29sdp"
         android:src="@drawable/ic_button_back"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="21dp"
-        android:layout_marginStart="24dp"/>
+        android:layout_marginTop="@dimen/_16sdp"
+        android:layout_marginStart="@dimen/_19sdp"/>
 
     <TextView
         android:id="@+id/title_booking"
@@ -24,17 +24,16 @@
         app:layout_constraintStart_toEndOf="@id/back_button"
         app:layout_constraintTop_toTopOf="@id/back_button"
         app:layout_constraintBottom_toBottomOf="@id/back_button"
-        android:layout_marginStart="16dp"
-        android:textSize="20sp"
+        android:layout_marginStart="@dimen/_12sdp"
+        android:textSize="@dimen/_16sdp"
         android:textColor="@color/bolder_text"
         android:textStyle="bold"/>
 
     <View
         android:id="@+id/booking_details_layout"
-        android:layout_width="match_parent"
-        android:layout_height="125dp"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="37dp"
+        android:layout_width="@dimen/_290sdp"
+        android:layout_height="@dimen/_95sdp"
+        android:layout_marginTop="@dimen/_25sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:background="@drawable/ic_frame_trip"
@@ -44,21 +43,21 @@
         android:id="@+id/booking_trip_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="11sp"
+        android:textSize="@dimen/_9sdp"
         tools:text="Рейс №23"
         app:layout_constraintTop_toTopOf="@id/booking_details_layout"
         app:layout_constraintStart_toStartOf="@id/booking_details_layout"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginTop="@dimen/_9sdp"
+        android:layout_marginStart="@dimen/_12sdp"
         android:textColor="@color/black"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/route_cities"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="@dimen/_2sdp"
         android:textColor="@color/bolder_text"
-        android:textSize="17sp"
+        android:textSize="@dimen/_13sdp"
         app:layout_constraintStart_toStartOf="@+id/booking_trip_number"
         app:layout_constraintTop_toBottomOf="@id/booking_trip_number"
         tools:text="Алматы - Нурсултан"
@@ -67,7 +66,7 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="11sp"
+        android:textSize="@dimen/_9sdp"
         android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="@+id/route_cities"
         app:layout_constraintTop_toBottomOf="@id/route_cities"
@@ -76,14 +75,14 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/booking_amount"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/_30sdp"
         app:layout_constraintStart_toStartOf="@id/booking_details_layout"
         app:layout_constraintEnd_toEndOf="@id/booking_details_layout"
         app:layout_constraintBottom_toBottomOf="@id/booking_details_layout"
         android:background="@drawable/ic_blue_bottom_layout"
         android:textColor="@color/white"
         android:gravity="center"
-        android:textSize="17sp"
+        android:textSize="@dimen/_13sdp"
         tools:text="10 000 〒"/>
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -92,8 +91,8 @@
         android:layout_height="wrap_content"
         android:text="@string/details"
         android:textColor="@color/blue_text"
-        android:textSize="13sp"
-        android:layout_marginEnd="15dp"
+        android:textSize="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_12sdp"
         app:layout_constraintBottom_toBottomOf="@+id/route_cities"
         app:layout_constraintEnd_toEndOf="@+id/booking_details_layout"
         app:layout_constraintTop_toTopOf="@+id/route_cities" />
@@ -103,7 +102,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/booking_expires"
-        android:textSize="15sp"
+        android:textSize="@dimen/_12sdp"
         android:layout_marginStart="15dp"
         android:textColor="@color/black"
         android:layout_marginTop="28dp"
@@ -114,9 +113,9 @@
         android:id="@+id/booking_expires_timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
+        android:layout_marginEnd="@dimen/_12sdp"
         android:textColor="@color/black"
-        android:textSize="17sp"
+        android:textSize="@dimen/_12sdp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/text_booking_expires_title"
         app:layout_constraintEnd_toEndOf="parent"
@@ -137,8 +136,8 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/appCompatImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             android:src="@drawable/ic_card_image"
@@ -151,21 +150,23 @@
             android:layout_height="wrap_content"
             android:text="@string/with_bank_cards"
             android:textColor="@color/bolder_text"
-            android:textSize="15sp"
-            android:paddingBottom="12dp"
+            android:textSize="@dimen/_12sdp"
+            android:paddingBottom="@dimen/_9sdp"
             app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
             app:layout_constraintTop_toBottomOf="@id/appCompatImageView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button_pay_with_card"
-            android:layout_width="match_parent"
-            android:layout_height="42dp"
-            app:layout_constraintTop_toBottomOf="@id/booking_card_title"
+            android:layout_width="@dimen/_270sdp"
+            android:layout_height="@dimen/_35sdp"
             android:layout_marginHorizontal="16dp"
             android:background="@drawable/ic_button_layout"
             android:text="@string/proceed_to_checkout_button"
             android:textAllCaps="false"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/booking_card_title" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -183,8 +184,8 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/appCompatImageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             android:src="@drawable/kaspi_logo"
@@ -197,21 +198,23 @@
             android:layout_height="wrap_content"
             android:text="@string/with_bank_cards"
             android:textColor="@color/bolder_text"
-            android:textSize="15sp"
-            android:paddingBottom="12dp"
+            android:textSize="@dimen/_12sdp"
+            android:paddingBottom="@dimen/_9sdp"
             app:layout_constraintStart_toStartOf="@+id/appCompatImageView2"
             app:layout_constraintTop_toBottomOf="@id/appCompatImageView2" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button_pay_with_kaspi"
-            android:layout_width="match_parent"
-            android:layout_height="42dp"
-            app:layout_constraintTop_toBottomOf="@id/booking_kaspi_title"
+            android:layout_width="@dimen/_270sdp"
+            android:layout_height="@dimen/_35sdp"
             android:layout_marginHorizontal="16dp"
             android:background="@drawable/ic_button_layout"
             android:text="@string/proceed_to_checkout_button"
             android:textAllCaps="false"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/booking_kaspi_title" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
