--- a/app/src/main/res/layout/fragment_driver_schedule.xml
+++ b/app/src/main/res/layout/fragment_driver_schedule.xml
@@ -11,17 +11,16 @@
         android:id="@+id/user_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="16sp"
+        android:layout_marginTop="@dimen/_17sdp"
+        android:layout_marginStart="@dimen/_2sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:textSize="@dimen/_16sdp"
         android:text="@string/app_name"
         android:textColor="@color/bolder_text"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"  />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/text_enter"
@@ -29,9 +28,9 @@
         android:layout_height="0dp"
         android:clipToPadding="false"
         tools:listitem="@layout/item_driver_schedule"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="@dimen/_25sdp"
+        android:layout_marginEnd="@dimen/_6sdp"
+        android:layout_marginBottom="@dimen/_17sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
