--- a/app/src/main/res/layout/fragment_payment_order_result.xml
+++ b/app/src/main/res/layout/fragment_payment_order_result.xml
@@ -12,13 +12,13 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/back_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
             android:src="@drawable/ic_close_payment_order_result"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="21dp"
-            android:layout_marginStart="24dp"/>
+            android:layout_marginStart="@dimen/_17sdp"
+            android:layout_marginTop="@dimen/_17sdp"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/title_payment_order_result"
@@ -28,18 +28,18 @@
             app:layout_constraintStart_toEndOf="@id/back_button"
             app:layout_constraintTop_toTopOf="@id/back_button"
             app:layout_constraintBottom_toBottomOf="@id/back_button"
-            android:layout_marginStart="16dp"
-            android:textSize="20sp"
+            android:layout_marginStart="@dimen/_17sdp"
+            android:textSize="@dimen/_16sdp"
             android:textColor="@color/bolder_text"
             android:textStyle="bold"/>
 
         <View
             android:id="@+id/ticket_layout"
             android:layout_width="match_parent"
-            android:layout_height="550dp"
-            android:layout_marginHorizontal="30dp"
+            android:layout_height="@dimen/_425sdp"
+            android:layout_marginHorizontal="@dimen/_26sdp"
             android:background="@drawable/ic_ticket_layout"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="@dimen/_25sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,11 +49,11 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginStart="@dimen/_25sdp"
+            android:layout_marginTop="@dimen/_35sdp"
             android:text="@string/title_client_data"
             android:textColor="@color/bolder_text"
-            android:textSize="12sp"
+            android:textSize="@dimen/_10sdp"
             app:layout_constraintStart_toStartOf="@id/ticket_layout"
             app:layout_constraintTop_toTopOf="@id/ticket_layout" />
 
@@ -61,12 +61,11 @@
             android:id="@+id/appCompatTextView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:text="@string/seats"
             android:textColor="@color/bolder_text"
-            android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@id/ticket_layout"
+            android:textSize="@dimen/_10sdp"
+            app:layout_constraintStart_toStartOf="@+id/textView"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -74,10 +73,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/bolder_text"
-            android:textSize="12sp"
+            android:textSize="@dimen/_10sdp"
             android:textStyle="bold"
             android:gravity="end"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="@dimen/_28sdp"
             android:layout_marginStart="5dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="@+id/ticket_layout"
@@ -90,10 +89,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/bolder_text"
-            android:textSize="12sp"
+            android:textSize="@dimen/_10sdp"
             android:textStyle="bold"
             android:gravity="end"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="@dimen/_3sdp"
             app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView6"
             app:layout_constraintEnd_toEndOf="@+id/client_name"
             app:layout_constraintStart_toEndOf="@+id/appCompatTextView6"
@@ -102,9 +101,9 @@
 
         <View
             android:id="@+id/view4"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="@dimen/_13sdp"
+            android:layout_height="@dimen/_13sdp"
+            android:layout_marginTop="@dimen/_14sdp"
             android:background="@drawable/ic_circle_ticket"
             app:layout_constraintStart_toStartOf="@+id/appCompatTextView6"
             app:layout_constraintTop_toBottomOf="@+id/appCompatTextView6" />
@@ -112,7 +111,7 @@
         <View
             android:id="@+id/view6"
             android:layout_width="1dp"
-            android:layout_height="76dp"
+            android:layout_height="@dimen/_65sdp"
             android:background="@drawable/payment_order_result_line"
             app:layout_constraintEnd_toEndOf="@+id/view4"
             app:layout_constraintStart_toStartOf="@+id/view4"
@@ -120,8 +119,8 @@
 
         <View
             android:id="@+id/view5"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
+            android:layout_width="@dimen/_13sdp"
+            android:layout_height="@dimen/_13sdp"
             android:background="@drawable/ic_circle_ticket"
             app:layout_constraintEnd_toEndOf="@+id/view6"
             app:layout_constraintStart_toStartOf="@+id/view6"
@@ -132,9 +131,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/bolder_text"
-            android:textSize="13sp"
+            android:textSize="@dimen/_10sdp"
             android:textStyle="bold"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/_6sdp"
             app:layout_constraintBottom_toBottomOf="@+id/view4"
             app:layout_constraintStart_toEndOf="@+id/view4"
             app:layout_constraintTop_toTopOf="@+id/view4"
@@ -145,8 +144,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/bolder_text"
-            android:textSize="17sp"
-            android:layout_marginTop="8dp"
+            android:textSize="@dimen/_13sdp"
+            android:layout_marginTop="@dimen/_6sdp"
             app:layout_constraintStart_toStartOf="@+id/ticket_time_from"
             app:layout_constraintTop_toBottomOf="@+id/ticket_time_from"
             tools:text="Алматы"/>
@@ -155,9 +154,9 @@
             android:id="@+id/ticket_station_from"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="4dp"
+            android:layout_marginTop="@dimen/_6sdp"
             android:textColor="@color/bolder_text"
-            android:textSize="13sp"
+            android:textSize="@dimen/_10sdp"
             app:layout_constraintStart_toStartOf="@+id/ticket_city_from"
             app:layout_constraintTop_toBottomOf="@+id/ticket_city_from"
             tools:text="Автовокзал Сайран" />
@@ -167,9 +166,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/bolder_text"
-            android:textSize="13sp"
+            android:textSize="@dimen/_10sdp"
             android:textStyle="bold"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/_6sdp"
             app:layout_constraintStart_toEndOf="@+id/view5"
             app:layout_constraintTop_toBottomOf="@+id/view6"
             tools:text="19:10, 16 февраля" />
@@ -179,8 +178,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/bolder_text"
-            android:textSize="17sp"
-            android:layout_marginTop="8dp"
+            android:textSize="@dimen/_13sdp"
+            android:layout_marginTop="@dimen/_6sdp"
             app:layout_constraintStart_toStartOf="@+id/ticket_time_to"
             app:layout_constraintTop_toBottomOf="@+id/ticket_time_to"
             tools:text="Караганда"/>
@@ -189,18 +188,18 @@
             android:id="@+id/ticket_station_to"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="4dp"
+            android:layout_marginTop="@dimen/_6sdp"
             android:textColor="@color/bolder_text"
-            android:textSize="13sp"
+            android:textSize="@dimen/_10sdp"
             app:layout_constraintStart_toStartOf="@+id/ticket_city_to"
             app:layout_constraintTop_toBottomOf="@+id/ticket_city_to"
             tools:text="Автовокзал Караганда" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/qr_image_view"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginBottom="50dp"
+            android:layout_width="@dimen/_130sdp"
+            android:layout_height="@dimen/_130sdp"
+            android:layout_marginBottom="@dimen/_33sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
