--- a/app/src/main/res/layout/fragment_search_trip.xml
+++ b/app/src/main/res/layout/fragment_search_trip.xml
@@ -11,11 +11,11 @@
             android:id="@+id/search_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="23dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:textAlignment="center"
-            android:textSize="16sp"
+            android:layout_marginTop="@dimen/_17sdp"
+            android:layout_marginStart="@dimen/_2sdp"
+            android:layout_marginEnd="@dimen/_8sdp"
+            android:textAlignment="textStart"
+            android:textSize="@dimen/_16sdp"
             android:text="@string/app_name"
             android:textColor="@color/bolder_text"
             android:textStyle="bold"
@@ -25,12 +25,12 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/search_banner"
-            android:layout_width="match_parent"
-            android:layout_height="190dp"
+            android:layout_width="@dimen/_290sdp"
+            android:layout_height="@dimen/_130sdp"
             android:src="@drawable/banner2"
-            android:scaleType="fitCenter"
+            android:scaleType="fitXY"
             app:layout_constraintTop_toBottomOf="@id/search_title"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="@dimen/_25sdp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -40,59 +40,61 @@
             app:layout_constraintBottom_toBottomOf="@id/search_banner"
             app:layout_constraintStart_toStartOf="@id/search_banner"
             android:text="@string/main_subtitle"
-            android:textSize="16sp"
+            android:textSize="@dimen/_13sdp"
             android:textColor="@color/white"
-            android:layout_marginBottom="20dp"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginBottom="@dimen/_13sdp"
+            android:layout_marginStart="@dimen/_13sdp"/>
 
-        <FrameLayout
-            android:id="@+id/from_city_layout"
+    <FrameLayout
+        android:id="@+id/from_city_layout"
+        android:layout_width="@dimen/_290sdp"
+        android:layout_height="@dimen/_54sdp"
+        android:layout_marginTop="@dimen/_17sdp"
+        android:background="@drawable/ic_from_city_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_banner">
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            app:layout_constraintTop_toBottomOf="@id/search_banner"
-            android:background="@drawable/ic_from_city_layout"
-            android:layout_marginTop="24dp">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_3sdp"
+            android:background="#00000000"
+            android:hint="@string/from">
 
-            <com.google.android.material.textfield.TextInputLayout
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/from_city_et"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:hint="@string/from"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:background="#00000000">
+                android:layout_height="match_parent"
+                android:background="#00000000"
+                android:cursorVisible="false"
+                android:inputType="textNoSuggestions"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_13sdp"
+                app:boxBackgroundMode="none" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/from_city_et"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:textColor="@color/black"
-                    android:cursorVisible="false"
-                    app:boxBackgroundMode="none"
-                    android:inputType="textNoSuggestions"
-                    android:textSize="16sp"
-                    android:background="#00000000"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-            </com.google.android.material.textfield.TextInputLayout>
+        <View
+            android:id="@+id/open_from_cities_dialog"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-            <View
-                android:id="@+id/open_from_cities_dialog"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </FrameLayout>
+    </FrameLayout>
 
         <FrameLayout
             android:id="@+id/to_city_layout"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginTop="-2dp"
+            android:layout_height="@dimen/_54sdp"
+            android:layout_marginTop="@dimen/_minus2sdp"
             android:background="@drawable/ic_to_city_layout"
             app:layout_constraintTop_toBottomOf="@id/from_city_layout">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:hint="@string/where"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:background="#00000000">
@@ -105,7 +107,7 @@
                     android:cursorVisible="false"
                     app:boxBackgroundMode="none"
                     android:inputType="textNoSuggestions"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/_13sdp"
                     android:background="#00000000"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -119,13 +121,13 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/swap_cities_button"
-            android:layout_width="52dp"
-            android:layout_height="52dp"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
             android:background="@drawable/ic_cities_swap_button"
             app:layout_constraintTop_toTopOf="@id/from_city_layout"
             app:layout_constraintBottom_toBottomOf="@id/to_city_layout"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"/>
+            android:layout_marginEnd="@dimen/_16sdp"/>
 
         <FrameLayout
             android:id="@+id/date_layout"
@@ -153,7 +155,7 @@
                     android:textColor="@color/black"
                     app:boxBackgroundMode="none"
                     android:inputType="textNoSuggestions"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/_13sdp"
                     android:background="#00000000"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -210,7 +212,7 @@
                     android:textColor="@color/black"
                     app:boxBackgroundMode="none"
                     android:inputType="textNoSuggestions"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/_13sdp"
                     android:background="#00000000"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -222,27 +224,29 @@
 
         </FrameLayout>
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_user"
-            android:layout_marginTop="5dp"
-            app:layout_constraintTop_toTopOf="@id/passenger_number_layout"
-            app:layout_constraintEnd_toEndOf="@id/passenger_number_layout"
-            app:layout_constraintBottom_toBottomOf="@id/passenger_number_layout"
-            android:layout_marginEnd="16dp"/>
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/appCompatImageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_user"
+        app:layout_constraintBottom_toBottomOf="@id/passenger_number_layout"
+        app:layout_constraintEnd_toEndOf="@id/passenger_number_layout"
+        app:layout_constraintTop_toTopOf="@id/passenger_number_layout" />
 
-         <androidx.appcompat.widget.AppCompatButton
-             android:id="@+id/search_trip_button"
-             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_button_layout"
-            android:text="@string/search_button"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-             android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/search_trip_button"
+        android:layout_width="@dimen/_290sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_marginBottom="@dimen/_25sdp"
+        android:background="@drawable/ic_button_layout"
+        android:text="@string/search_button"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_13sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
