--- a/app/src/main/res/layout/fragment_tickets.xml
+++ b/app/src/main/res/layout/fragment_tickets.xml
@@ -4,26 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingHorizontal="15dp"
     tools:context=".ui.search_trip.SearchTripFragment">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/title_tickets"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_2sdp"
+        android:layout_marginTop="@dimen/_17sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
         android:text="@string/title_tickets"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="21dp"
-        android:textSize="20sp"
         android:textColor="@color/bolder_text"
-        android:textStyle="bold"/>
+        android:textSize="@dimen/_16sdp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/no_tickets_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="86dp"
+        android:layout_width="@dimen/_90sdp"
+        android:layout_height="@dimen/_93sdp"
+        android:layout_marginTop="@dimen/_25sdp"
         android:src="@drawable/no_tickets"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,8 +38,8 @@
         android:layout_height="wrap_content"
         android:text="@string/no_tickets"
         android:visibility="gone"
-        android:textSize="14sp"
-        android:layout_marginTop="20dp"
+        android:textSize="@dimen/_11sdp"
+        android:layout_marginTop="@dimen/_15sdp"
         app:layout_constraintEnd_toEndOf="@+id/no_tickets_image"
         app:layout_constraintStart_toStartOf="@+id/no_tickets_image"
         app:layout_constraintTop_toBottomOf="@+id/no_tickets_image" />
@@ -46,10 +49,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/tickets_list_title"
-        android:textSize="20sp"
+        android:textSize="@dimen/_16sdp"
         android:textColor="@color/black"
         android:textStyle="bold"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/_15sdp"
         app:layout_constraintEnd_toEndOf="@+id/no_tickets_image"
         app:layout_constraintStart_toStartOf="@+id/no_tickets_image"
         app:layout_constraintTop_toBottomOf="@+id/no_tickets_image" />
@@ -58,26 +61,24 @@
         android:id="@+id/no_tickets_text_not_authorize_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:textSize="@dimen/_11sdp"
         android:text="@string/tickets_list_text"
         android:gravity="center"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/_7sdp"
         app:layout_constraintTop_toBottomOf="@id/no_tickets_text_not_authorize_title"
         app:layout_constraintStart_toStartOf="@id/no_tickets_text_not_authorize_title"
         app:layout_constraintEnd_toEndOf="@id/no_tickets_text_not_authorize_title"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_my_tickets_authorization_enter"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_290sdp"
+        android:layout_height="@dimen/_40sdp"
         android:background="@drawable/ic_button_layout"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="@dimen/_25sdp"
         android:text="@string/enter_button"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="@dimen/_13sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
