--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -9,12 +9,12 @@
         android:id="@+id/user_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        android:text="@string/app_name"
+        android:textAlignment="textStart"
+        android:layout_marginStart="@dimen/_2sdp"
+        android:layout_marginTop="@dimen/_17sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:textSize="@dimen/_16sdp"
+        android:text="@string/title_user"
         android:textColor="@color/bolder_text"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,8 +25,8 @@
         android:id="@+id/text_enter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="37dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginTop="@dimen/_25sdp"
+        android:layout_marginStart="@dimen/_2sdp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
         android:textSize="16sp"
@@ -38,17 +38,19 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/user_email_layout"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
+        style="@style/LoginTextInputLayoutStyle"
+        android:layout_width="@dimen/_290sdp"
+        android:layout_height="@dimen/_55sdp"
+        android:layout_marginTop="@dimen/_18sdp"
         android:hint="@string/email"
-        app:layout_constraintTop_toBottomOf="@id/text_enter"
-        android:layout_marginTop="24dp"
-        app:boxCornerRadiusTopStart="16dp"
         app:boxCornerRadiusBottomEnd="16dp"
         app:boxCornerRadiusBottomStart="16dp"
         app:boxCornerRadiusTopEnd="16dp"
+        app:boxCornerRadiusTopStart="16dp"
         app:endIconMode="clear_text"
-        style="@style/LoginTextInputLayoutStyle">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_enter">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/user_email_et"
@@ -56,46 +58,49 @@
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
             android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textSize="@dimen/_13sdp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/user_password_layout"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
+        style="@style/LoginTextInputLayoutStyle"
+        android:layout_width="@dimen/_290sdp"
+        android:layout_height="@dimen/_55sdp"
+        android:layout_marginTop="@dimen/_13sdp"
         android:hint="@string/password"
-        app:layout_constraintTop_toBottomOf="@id/user_email_layout"
-        android:layout_marginTop="12dp"
-        app:boxCornerRadiusTopStart="16dp"
         app:boxCornerRadiusBottomEnd="16dp"
         app:boxCornerRadiusBottomStart="16dp"
         app:boxCornerRadiusTopEnd="16dp"
+        app:boxCornerRadiusTopStart="16dp"
         app:endIconMode="password_toggle"
-        style="@style/LoginTextInputLayoutStyle">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/user_email_layout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/user_password_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="@color/black"
-            app:boxBackgroundMode="none"
             android:inputType="textPassword"
-            android:textSize="16sp" />
+            android:textColor="@color/black"
+            android:textSize="@dimen/_13sdp"
+            app:boxBackgroundMode="none" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/search_trip_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_290sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_marginTop="@dimen/_17sdp"
         android:background="@drawable/ic_button_layout"
-        android:textColor="@color/white"
+        android:text="@string/enter_button"
         android:textAllCaps="false"
-        android:textSize="16sp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@id/user_password_layout"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_13sdp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/continue_button"/>
+        app:layout_constraintTop_toBottomOf="@id/user_password_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
