--- a/app/src/main/res/layout/item_city_selector.xml
+++ b/app/src/main/res/layout/item_city_selector.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingBottom="12dp"
+    android:paddingBottom="@dimen/_8sdp"
     android:clickable="true"
     android:focusable="true"
     android:background="?attr/selectableItemBackground">
@@ -13,7 +13,7 @@
     <View
         android:id="@+id/line_separator"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/_1sdp"
         android:alpha="0.1"
         android:background="@color/black"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,9 +25,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/line_separator"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="16dp"
-        android:textSize="16sp"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginStart="@dimen/_12sdp"
+        android:textSize="@dimen/_13sdp"
         android:textColor="@color/black"
         tools:text="Алматы"/>
 
